--- a/fitlogs/ALSC_asgcn/GooglePixel_no-ft/no-ft_roberta/default.cfg
+++ b/fitlogs/ALSC_asgcn/GooglePixel_no-ft/no-ft_roberta/default.cfg
@@ -39,7 +39,7 @@ exclude_columns =
 # 允许编辑的column
 editable_columns = memo,meta-fit_msg,meta-git_msg
 # column的显示顺序，强烈推荐不要手动更改
-column_order = {"id": "EndOfOrder", "meta": {"fit_msg": "EndOfOrder", "git_msg": "EndOfOrder"}, "hyper": {"layers": "EndOfOrder", "pre_layer": "EndOfOrder", "train_acc": "EndOfOrder", "test_acc": "EndOfOrder", "train_loss": "EndOfOrder", "test_loss": "EndOfOrder"}, "metric": {"acc": "EndOfOrder", "f1": "EndOfOrder"}, "other": {"rng_seed": "EndOfOrder", "cost_time": "EndOfOrder"}, "memo": "EndOfOrder"}
+column_order = {"id": "EndOfOrder", "meta": {"fit_msg": "EndOfOrder", "git_msg": "EndOfOrder"}, "hyper": {"layers": "EndOfOrder", "pre_layer": "EndOfOrder", "train_acc": "EndOfOrder", "test_acc": "EndOfOrder", "train_loss": "EndOfOrder", "test_loss": "EndOfOrder"}, "metric": {"acc": "EndOfOrder", "f1": "EndOfOrder"}, "other": {"cost_time": "EndOfOrder"}, "memo": "EndOfOrder"}
 
 [chart_settings]
 # 在走势图中，每个对象最多显示的点的数量，不要太大，否则前端可能会卡住
